force-app/main/default/objects/Cardcom_Logger__c/Cardcom_Logger__c.object-meta.xml
<CustomObject>
    <label>Cardcom Logger</label>
    <nameField>
        <displayFormat>ccl-{0000}</displayFormat>
        <label>Cardcom Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cardcom Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>