force-app/main/default/objects/Cardcom_Logger__c/fields/Card__c.field-meta.xml
<CustomField>
    <fullName>Card__c</fullName>
    <label>Card owner Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>