force-app/main/default/objects/Cardcom_Logger__c/fields/Card_owner_name__c.field-meta.xml
<CustomField>
    <fullName>Card_owner_name__c</fullName>
    <label>Card owner name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>