force-app/main/default/objects/Cardcom_Logger__c/fields/Internal_Deal_number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Deal_number__c</fullName>
    <label>Internal Deal number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>