force-app/main/default/objects/Cardcom_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Card__c</columns>
    <columns>Card_owner_name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fee_Id__c</columns>
    <columns>Internal_Deal_number__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Response_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>